<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.rikkeisoft.rikkonbi.UI.Home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_category"
        android:name="com.rikkeisoft.rikkonbi.UI.Category.CategoryFragment"
        android:label="@string/title_category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/navigation_message"
        android:name="com.rikkeisoft.rikkonbi.UI.Notification.NotificationFragment"
        android:label="@string/title_message"
        tools:layout="@layout/fragment_notification" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.rikkeisoft.rikkonbi.UI.Account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />

</navigation>