<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.OrderSuccess.OrderSuccessScreen">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <TextView
            android:gravity="center"
            android:textSize="26sp"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/icon_right"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/bg_circle"
        android:src="@drawable/ic_check_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintVertical_bias="0.277" />

    <TextView
        android:id="@+id/detail_1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icon_right"
        android:text="@string/detail_1_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"/>
    <TextView
        android:id="@+id/detail_2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_1"
        android:text="@string/detail_2_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/detail_3"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/ic_arrow_drop_up_black_24dp"
        android:gravity="left"
        android:text="@string/detail_3_order"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_2" />

    <TextView
        android:id="@+id/detail_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/detail_phone"
        android:textColor="@color/orange_txt"
        android:textSize="18sp"
        android:layout_marginLeft="45dp"
        app:layout_constraintBottom_toBottomOf="@id/detail_3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btn_history"
        android:background="@drawable/btn_signout"
        android:gravity="center"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15dp"
        android:textAllCaps="false"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_histoty"
        android:textSize="16sp"/>
    <Button
        android:id="@+id/btn_home_screen"
        android:background="@drawable/btn_signout"
        android:gravity="center"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/btn_history"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_to_home"
        android:layout_marginBottom="10dp"
        android:textAllCaps="false"
        android:textSize="16sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>