<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="50dp"
    android:layout_marginEnd="50dp"
    android:orientation="horizontal"
    android:background="@drawable/dialog_redius">
        <TextView
            android:id="@+id/title_massage"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textColor="@android:color/black"
            android:text="@string/message_hotline_topic"
            android:layout_width="match_parent"
            android:gravity="center"

            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/detail_massage"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_massage"
            android:text="@string/message_hotline_detail"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"/>
        <View
            android:id="@+id/view_underline"
            app:layout_constraintTop_toBottomOf="@id/detail_massage"
            android:background="@android:color/darker_gray"
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            />
        <Button
            android:id="@+id/btn_massage_close"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="4dp"
            style="?android:attr/borderlessButtonStyle"
            android:background="@android:color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_underline"
            app:layout_constraintRight_toLeftOf="@+id/btn_massage_yes"
            app:layout_constraintHorizontal_chainStyle="spread" />
       <View
        android:id="@+id/vertical_line"
           android:layout_width="55dp"
           android:layout_height="0.1mm"
           android:layout_marginTop="28dp"
           app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_underline"
        android:background="@android:color/darker_gray"
        android:rotation="90" />

        <Button
            android:id="@+id/btn_massage_yes"
            android:layout_width="0dp"
            android:background="@android:color/white"
            style="?android:attr/borderlessButtonStyle"
            android:layout_height="wrap_content"
            android:text="@string/message_hotline_yes"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toBottomOf="@id/view_underline"
            app:layout_constraintLeft_toRightOf="@+id/btn_massage_close"
            app:layout_constraintRight_toRightOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>