<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<androidx.constraintlayout.widget.ConstraintLayout
    android:fitsSystemWindows="true"
    android:background="@color/gray_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:id="@+id/toolbar"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?attr/actionButtonStyle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <ImageView
            android:id="@+id/action_btn_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="end|center_vertical"
            android:src="@drawable/ic_shopping_cart_black_24dp"/>
        <TextView
            android:id="@+id/cart_badge"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="right|end|top"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/badge_background"
            android:gravity="center"
            android:padding="3dp"
            android:textColor="@android:color/white"
            android:text="0"
            android:textSize="10sp"/>
        <TextView
            android:gravity="center"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:text="@string/title_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </FrameLayout>

   <RelativeLayout
       android:id="@+id/header_account"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintTop_toBottomOf="@id/toolbar"
       android:background="@android:color/white"
       android:padding="10dp"
       >
       <de.hdodenhof.circleimageview.CircleImageView
           xmlns:app="http://schemas.android.com/apk/res-auto"
           android:id="@+id/person_profile"
           android:layout_width="69dp"
           android:layout_height="69dp"
           android:layout_marginLeft="5dp"
           android:src="@drawable/img_person"/>
       <TextView
           android:id="@+id/person_username"
           android:layout_marginLeft="10dp"
           android:layout_marginTop="10dp"
           android:textSize="15sp"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/name_user"
           android:layout_toRightOf="@id/person_profile"
           android:textColor="@android:color/black"
           />
       <TextView
           android:id="@+id/person_useremail"
           android:layout_toRightOf="@id/person_profile"
           android:layout_marginTop="5dp"
           android:layout_marginLeft="10dp"
           android:textSize="15sp"
           android:text="@string/email_user"
           android:layout_below="@id/person_username"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"/>
   </RelativeLayout>

       <Button
           android:id="@+id/order_management"
           app:layout_constraintTop_toBottomOf="@id/header_account"
           android:drawableRight="@drawable/ic_keyboard_arrow_right_black_24dp"
           android:background="@android:color/white"
           android:text="@string/orger_management"
           android:textAllCaps="false"
           android:textStyle="bold"
           android:layout_width="match_parent"
           android:gravity="left|center_vertical"
           android:paddingLeft="15dp"
           android:paddingRight="15dp"
           android:layout_marginTop="5dp"
           android:layout_height="wrap_content"/>
       <View
           android:id="@+id/under_line"
           android:background="@color/gray_background"
           android:layout_below="@id/order_management"
           android:layout_width="match_parent"
           android:layout_marginTop="1dp"
           app:layout_constraintBottom_toBottomOf="@id/order_management"
           android:layout_height="0.01mm"/>
    <Button
        android:id="@+id/book_borrowing"
        app:layout_constraintTop_toBottomOf="@id/under_line"
        android:drawableRight="@drawable/ic_keyboard_arrow_right_black_24dp"
        android:background="@android:color/white"
        android:text="@string/book_borrowing"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:gravity="left|center_vertical"
        android:paddingLeft="15dp"
        android:layout_marginTop="1dp"
        android:paddingRight="15dp"
        android:layout_height="wrap_content"/>
    <View
        android:id="@+id/under_line_2"
        android:background="@color/gray_background"
        android:layout_below="@id/order_management"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toBottomOf="@id/book_borrowing"
        android:layout_height="0.01mm"
        android:layout_marginTop="1dp"
        />

    <Button
        android:id="@+id/info_rikkei_soft"
        app:layout_constraintTop_toBottomOf="@id/under_line_2"
        android:drawableLeft="@drawable/icon_mini_rikkei"
        android:drawableRight="@drawable/ic_keyboard_arrow_right_black_24dp"
        android:background="@android:color/white"
        android:text="@string/rikkei_info"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:gravity="left|center_vertical"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        android:paddingRight="15dp"
        android:layout_marginTop="5dp"
        android:drawablePadding="8dp"
        android:layout_height="wrap_content"/>
    <View
        android:id="@+id/under_line_3"
        android:background="@color/gray_background"
        android:layout_below="@id/order_management"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toBottomOf="@id/info_rikkei_soft"
        android:layout_height="0.01mm"/>

    <Button
        android:id="@+id/hotline_rikkei_soft"
        app:layout_constraintTop_toBottomOf="@id/under_line_3"
        android:drawableRight="@drawable/ic_keyboard_arrow_right_black_24dp"
        android:background="@android:color/white"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:gravity="left|center_vertical"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        android:paddingRight="15dp"
        android:layout_marginTop="1dp"
        android:drawablePadding="8dp"
        android:layout_height="wrap_content"/>
    <View
        android:id="@+id/under_line_4"
        android:background="@color/gray_background"
        android:layout_below="@id/order_management"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toBottomOf="@id/hotline_rikkei_soft"
        android:layout_height="0.01mm"/>
      <View
          android:id="@+id/under_line_5"
          android:background="@android:color/white"
          app:layout_constraintTop_toBottomOf="@id/under_line_4"
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:layout_marginTop="1dp"
          app:layout_constraintVertical_weight="1"
          app:layout_constraintBottom_toBottomOf="parent"/>
       <TextView
           android:id="@+id/version1"
           android:text="@string/version1_0"
           android:textColor="@color/cus_gray"
           android:layout_width="wrap_content"
           app:layout_constraintRight_toRightOf="parent"
           app:layout_constraintLeft_toLeftOf="parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="10dp"
           app:layout_constraintVertical_bias="1.0"
           app:layout_constraintTop_toBottomOf="@id/under_line_4"
           app:layout_constraintBottom_toTopOf="@id/signout_btn"
           />

    <Button
        android:id="@+id/signout_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/btn_signout"
        android:gravity="center"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>