<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/constraintLayout"
    android:background="@android:color/white"
    tools:context=".UI.Notification.NotificationFragment">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <TextView
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:text="@string/title_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/text_no_item"
        android:layout_marginBottom="15dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="parent"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:text="@string/message_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle_message"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:listitem="@layout/card_notification"
        />
    <ProgressBar
        android:id="@+id/main_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="@id/recycle_message"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
        <!--</androidx.constraintlayout.widget.ConstraintLayout>-->
     <RelativeLayout
         android:id="@+id/relation_blur"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintVertical_weight="1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
         >

         <eightbitlab.com.blurview.BlurView
             android:id="@+id/blurView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
            >

         </eightbitlab.com.blurview.BlurView>
     </RelativeLayout>

        <LinearLayout
            android:orientation="vertical"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:id="@+id/Linear_setting"
            >
            <Button
                android:id="@+id/btn_watch"
                android:layout_width="match_parent"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_gray_border"
                android:text="@string/btn_watch"
                android:textAllCaps="false"
                android:textColor="@android:color/holo_red_light"
                android:textSize="18sp" />
            <Button
                android:id="@+id/btn_remove"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:textColor="@android:color/holo_red_light"
                android:text="@string/btn_del"
                android:background="@drawable/btn_gray_border"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/btn_cancel"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:textColor="@android:color/holo_red_light"
                android:text="@string/btn_cancel"
                android:background="@drawable/btn_gray_border"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"/>
        </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>